--- a/src/style/main.css
+++ b/src/style/main.css
@@ -46,3 +46,18 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+.main-container {
+	display: flex;
+	position: relative;
+	margin-top: 100px;
+	height: calc(100vh - 100px);
+}
+
+.container {
+	margin-left: 300px;
+	width: calc(100vw - 300px);
+	color: #001b2b;
+	background-color: #EFEFEF;
+	font-family: "Work Sans"
+}
