--- a/src/style/workPlaceTask.css
+++ b/src/style/workPlaceTask.css
@@ -112,11 +112,11 @@
     font-size: 1em;
 }
 
-.edit-feather:hover, .trash-feather:hover {
+.edit-feather:hover, .trash-feather:hover, .x-trash:hover, .check-feather:hover {
     stroke-width: 2;
 }
 
-.edit-feather:active, .trash-feather:active {
+.edit-feather:active, .trash-feather:active, .x-trash:active, .check-feather:active{
     stroke-width: 1.25;
 }
 
