Ajustado Altura  quando table é mair que o wrapper

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -51,7 +51,7 @@ table {
 	display: flex;
 	position: relative;
 	margin-top: 100px;
-	height: calc(100vh - 100px);
+	min-height: calc(100vh - 100px);
 }
 
 .container {
